--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,8 +13,19 @@ jobs:
       uses: actions/checkout@v2
       with:
         ref: ${{ github.event.pull_request.head.sha }}
+    - name: install Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+    - name: install yarn
+      run: npm install -g yarn
+    - name: run webpacker install
+      run: |
+        bundle exec rails webpacker:install
+        bundle exec rails webpacker:compile RAILS_ENV=test
     - name: run test on docker-compose
       run: |
         docker-compose build
         docker-compose run --rm web bin/setup
         docker-compose run --rm web rails test
+
