--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,12 +13,15 @@ jobs:
       uses: actions/checkout@v2
       with:
         ref: ${{ github.event.pull_request.head.sha }}
-    - name: install Node.js
+    - name: install Node.js and Yarn
       uses: actions/setup-node@v2
       with:
         node-version: '14'
-    - name: install yarn
-      run: npm install -g yarn
+    - name: install dependencies
+      run: |
+        gem install bundler
+        bundle install --path vendor/bundle
+        yarn install
     - name: run webpacker install
       run: |
         bundle exec rails webpacker:install
