--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,7 +20,8 @@ jobs:
     - name: install dependencies
       run: |
         gem install bundler
-        bundle install --path vendor/bundle
+        bundle config set path 'vendor/bundle'
+        bundle install
         yarn install
     - name: run webpacker install
       run: |
