--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,23 +13,13 @@ jobs:
       uses: actions/checkout@v2
       with:
         ref: ${{ github.event.pull_request.head.sha }}
-    - name: install Node.js and Yarn
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
     - name: install dependencies
       run: |
-        gem install bundler
-        bundle config set path 'vendor/bundle'
-        bundle install
-        yarn install
-    - name: run webpacker install
-      run: |
-        bundle exec rails webpacker:install
-        bundle exec rails webpacker:compile RAILS_ENV=test
-    - name: run test on docker-compose
-      run: |
         docker-compose build
-        docker-compose run --rm web bin/setup
-        docker-compose run --rm web rails test
+        docker-compose run --rm web bundle install
+        docker-compose run --rm web yarn install --check-files
+    - name: build webpacker
+      run: docker-compose run --rm web rails webpacker:compile
+    - name: run tests
+      run: docker-compose run --rm web rails test
 
