--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,18 +13,8 @@ jobs:
       uses: actions/checkout@v2
       with:
         ref: ${{ github.event.pull_request.head.sha }}
-    - name: install dependencies
+    - name: run test on docker-compose
       run: |
         docker-compose build
-        docker-compose run --rm web bundle install
-        docker-compose run --rm web yarn install --check-files
-    - name: use stable version of Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14.x'
-    - name: build webpacker
-      run: docker-compose run --rm web rails webpacker:compile
-    - name: run tests
-      run: docker-compose run --rm web rails test
-
-
+        docker-compose run --rm web bin/setup
+        docker-compose run --rm web rails test
